# stremio-shyt

./: .env.docker  .env_example  .gitignore  Cargo.toml  README.md  deploy.sh  main.rs  stremio_api.db
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  main.rs
crates/application/: Cargo.toml
crates/application/examples/: main.rs  torrent_demo.rs  torrent_flow.rs
crates/application/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/schema/: schema.sql
crates/database/src/: lib.rs  schema.rs
crates/database/src/interfaces/: content_repository.rs  mod.rs  user_repository.rs
crates/database/src/repositories/: content_repository_impl.rs  mod.rs  user_repository_impl.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/entities/: mod.rs  peer.rs  piece.rs  stream.rs  torrent.rs  torrent_file.rs  tracker.rs  user.rs
crates/domain/src/repositories/: mod.rs  peer_repository.rs  piece_repository.rs  torrent_repository.rs  tracker_repository.rs  user_repository.rs
crates/domain/src/services/: download_service.rs  mod.rs  peer_service.rs  piece_downloader.rs  piece_manager.rs  stream_prioritizer.rs  streaming_buffer.rs  streaming_service.rs  torrent_service.rs  tracker_service.rs  user_service.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/database/: mod.rs  schema.rs
crates/infrastructure/src/repositories/: mod.rs  sqlite_peer_repository.rs  sqlite_piece_repository.rs  sqlite_torrent_repository.rs  sqlite_tracker_repository.rs
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docker/k8s/: k8s-deployment.yaml
migrations/2025-07-24-095328_create_users/: up.sql
migrations/2025-07-24-095414_create_content/: up.sql
migrations/2025-07-24-122510_create_torrent_tables/: down.sql  up.sql
src/: config.rs  main.rs
