[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
bip_metainfo = "0.12"
