[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",               # Enable SQLite support
    "postgres",             # Optional: Enable PostgreSQL support
    "chrono",
    "uuid",
    "json",
] }
dotenv = "0.15"

[lib]
path = "src/lib.rs"
