[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
diesel = { version = "2.0", features = ["sqlite", "r2d2", "chrono"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
path = "src/lib.rs"
